<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="0dp"
        android:ems="10"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="@tools:sample/lorem"/>

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="0dp"
        android:ems="10"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="@tools:sample/lorem"/>




</androidx.constraintlayout.widget.ConstraintLayout>